--- a/index.html
+++ b/index.html
@@ -10,82 +10,69 @@
 </head>
 <body>
     <!-- navbar -->
-    <div class="heading">
-        <div class="item">
-            <h2 class="ui header">
-                <div class="content">CORE-V</div>
-                <div class="sub header" id="subtitle">Master the Big 5</div>
-            </h2>
-        </div>
+    <div class="ui-header">
+        <div class="content">CORE-V</div>
+        <div class="sub header" id="subtitle">Master the Big 5</div>
     </div>
+    
 
     <div class="grid-container">
-        <div class="first column">
-          <div class="list-container">
+            <div class="first-column">
             <!-- side menu -->
-            <ul class="ui divided list" id="exercises">
-              <li id="first"class="title">Movie titles will go here.</li>
-              <li class="exercise-item">Second exercise goes here</li>
-            </ul>
-        </div>
-    </div>
-        <!--exercise image and description-->
-    <div class="second-column">
-        <div class="lrgImg">
-            <img id="lrgImg" src="img/49ae7f18-5d22-4b68-b994-dae99cd0a566.jpg" alt="[LIFT NAME]">
-        </div>
-        <div class="exercise-info">
-            <div class="content">
-                Instruction
+                <ul class="ui divided list" id="exercises">
+                    <li id="first"class="exercise-item">BENCH PRESS</li>
+                    <li class="exercise-item">DEADLIFTS</li>
+                    <li class="exercise-item">SQUATS</li>
+                    <li class="exercise-item">BARBELL ROW</li>
+                    <li class="exercise-item">OVERHEAD PRESS</li>
+                </ul>
             </div>
-            <ol id="instruction" class="isntruction">
-                [DESCRIPTION OF THE EXERCISE GOES HERE]
-                Lie flat on a bench and set your hands just outside of shoulder width.
-                Set your shoulder blades by pinching them together and driving them into the bench.
-                Take a deep breath and allow your spotter to help you with the lift off in order to maintain tightness through your upper back.
-                Let the weight settle and ensure your upper back remains tight after lift off.
-                Inhale and allow the bar to descend slowly by unlocking the elbows.
-                Lower the bar in a straight line to the base of the sternum (breastbone) and touch the chest.
-                Push the bar bavk up in a straight line by pressing yourself into the bench, driving your feet into the floor for leg drive, and extending the elbows.
-                Repeat for the desired number of repetitions.
-            <ol>
+        <!--exercise image and description-->
+        <div class="second-column">
+            <div class="lrgImg">
+                <img id="lrgImg" src="img/49ae7f18-5d22-4b68-b994-dae99cd0a566.jpg" alt="[LIFT NAME]">
+            </div>
+            <div class="exercise-info">
+                <div class="content">Instruction
+                </div>
+                <ol id="instruction" class="instruction">
+                    CHOOSE YOUR EXERCISE
+                <ol>
+            </div>
         </div>
-    </div>
 
-    <div class="third-column">
-        <div class="stat-container" id="stat-container">
-            <div class="card">
-                <div id="name" class="title">Insert Exercise Name</div>
-                <div class="content">
-                        <div class="stats" id="primary-secondary"><span>Chest</span><span>Triceps</span></div>
-                        <div class="stats"><span id="weight">MAX WEIGHT</span><span id="currentMax">80kg</span></div>
+        <div class="third-column">
+            <div class="stat-container" id="stat-container">
+                <div class="card">
+                    <div id="name" class="title">OVERHEAD PRESS</div>
+                        <div class="stats" id="muscle-targets"><span>Chest</span><span>Triceps</span></div>
+                        <div class="stats"><span class="value" id="weight">MAX WEIGHT</span><span id="currentMax">80kg</span></div>
                         <div class="stats"><span class="value" id="sets">3</span> SETS</div>
                         <div class="stats"><span class="value" id="reps">12</span> REPS</div>
                         <div class="stats"><span class="value" id="volume">2880</span> kg</div>
                 </div>
             </div>
-        </div>
-        <div class="quick-log-input">
-            <div class="title">QUICK LOG</div>
-            <form class="log-container">
-                <div class="form-group">
-                    <label class="form-label">WEIGHT :</label>
-                    <input type="number" min="0" id="weight" name="weight" placeholder="kg">
-                </div>
+            <div class="quick-log-input">
+                <div class="title">QUICK LOG</div>
+                <form class="log-container">
+                    <div class="form-group">
+                        <label class="form-label">WEIGHT :</label>
+                        <input type="number" min="0" id="weight" name="weight" placeholder="kg">
+                    </div>
             
-                <div class="form-group">
-                    <label class="form-label">SETS :</label>
-                    <input type="number" min="0" id="sets" name="sets">
-                </div>
-                <div class="form-group">
-                    <label class="form-label">REPS :</label>
-                    <input type="number" min="0" id="reps" name="reps">
-                </div>
-                <button>Log Entry</button>
-            </form>
+                    <div class="form-group">
+                        <label class="form-label">SETS :</label>
+                        <input type="number" min="0" id="sets" name="sets">
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">REPS :</label>
+                        <input type="number" min="0" id="reps" name="reps">
+                    </div>
+                    <button>Log Entry</button>
+                </form>
+            </div>
         </div>
     </div>
-
 
 </body>
 </html>
