--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="grid-container">
             <div class="first-column">
             <!-- side menu -->
-                <ul class="ui divided list" id="exercises">
+                <ul class="ui-divided-list" id="exercises">
                     <li id="first"class="exercise-item">BENCH PRESS</li>
                     <li class="exercise-item">DEADLIFTS</li>
                     <li class="exercise-item">SQUATS</li>
@@ -33,8 +33,7 @@
                 <img id="lrgImg" src="img/49ae7f18-5d22-4b68-b994-dae99cd0a566.jpg" alt="[LIFT NAME]">
             </div>
             <div class="exercise-info">
-                <div class="content">Instruction
-                </div>
+                <div class="sub-headiing">Instruction</div>
                 <ol id="instruction" class="instruction">
                     CHOOSE YOUR EXERCISE
                 <ol>
@@ -49,7 +48,7 @@
                         <div class="stats"><span class="value" id="weight">MAX WEIGHT</span><span id="currentMax">80kg</span></div>
                         <div class="stats"><span class="value" id="sets">3</span> SETS</div>
                         <div class="stats"><span class="value" id="reps">12</span> REPS</div>
-                        <div class="stats"><span class="value" id="volume">2880</span> kg</div>
+                        <div class="stats"><span class="value" id="volume">2880</span> kg <span id="difference"></span></div>
                 </div>
             </div>
             <div class="quick-log-input">
