tweaked on colour scheme. Wev app colours are now in the theam of warm orange

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="first-column">
             <!-- side menu -->
                 <ul class="ui-divided-list" id="exercises">
-                    <li id="first"class="exercise-item">BENCH PRESS</li>
-                    <li class="exercise-item">DEADLIFTS</li>
+                    <li id="first" class="exercise-item">BENCH PRESS</li>
+                    <li class="exercise-item active">DEADLIFTS</li>
                     <li class="exercise-item">SQUATS</li>
                     <li class="exercise-item">BARBELL ROW</li>
                     <li class="exercise-item">OVERHEAD PRESS</li>
@@ -33,7 +33,7 @@
                 <img id="lrgImg" src="img/49ae7f18-5d22-4b68-b994-dae99cd0a566.jpg" alt="[LIFT NAME]">
             </div>
             <div class="exercise-info">
-                <div class="sub-headiing">Instruction</div>
+                <div class="sub-heading">INSTRUCTIONS</div>
                 <ol id="instruction" class="instruction">
                     CHOOSE YOUR EXERCISE
                 <ol>
@@ -43,12 +43,12 @@
         <div class="third-column">
             <div class="stat-container" id="stat-container">
                 <div class="card">
-                    <div id="name" class="title">OVERHEAD PRESS</div>
+                    <div id="name" class="title">What will you record today?</div>
                         <div class="stats" id="muscle-targets"><span>Chest</span><span>Triceps</span></div>
-                        <div class="stats"><span class="value" id="weight">MAX WEIGHT</span><span id="currentMax">80kg</span></div>
-                        <div class="stats"><span class="value" id="sets">3</span> SETS</div>
-                        <div class="stats"><span class="value" id="reps">12</span> REPS</div>
-                        <div class="stats"><span class="value" id="volume">2880</span> kg <span id="difference"></span></div>
+                        <div class="stats"><span class="value" id="weight">WEIGHT</span><span id="currentMax"></span></div>
+                        <div class="stats"><span class="value" id="sets"></span> SETS</div>
+                        <div class="stats"><span class="value" id="reps"></span> REPS</div>
+                        <div class="stats" id="totalVolume">VOLUME<span class="value" id="volume"></span><span id="difference"></span></div>
                 </div>
             </div>
             <div class="quick-log-input">
